--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@capacitor/core": "^8.0.0",
     "@libsql/client": "^0.15.15",
     "@radix-ui/react-popover": "^1.1.15",
+    "@types/leaflet": "^1.9.21",
     "framer-motion": "^12.23.26",
+    "leaflet": "^1.9.4",
     "midtrans-client": "^1.4.3",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
     "next-intl": "^4.6.1",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
